--- a/css/style.css
+++ b/css/style.css
@@ -4,19 +4,18 @@ body {
 }
 
 #container {
-    border: 1px solid grey;
-    border-radius: 3px;
     background-color: #FFF;
     /* drop shadow */
     box-shadow: 0 0 5px 3px #d9d9d9;
     margin: 78px auto;
+    border-radius: 4px;
 }
 
 #header {
     background-color: #F9F9F9;
     height: 82px;
-    position: relative;
-    margin-bottom: 16px;
+    position: relative;  
+    border-radius: 4px 4px 0 0;
 }
 
 .site-width {
@@ -24,7 +23,8 @@ body {
 }
 
 .gutter-lr {
-    padding: 0 16px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .left-side {
@@ -127,9 +127,18 @@ body {
     border: 1px solid #eee0ce;
     background-color: white;
     border-radius: 20px;    
-    color: #444;
+    color: #444444;
     padding: 8px 12px 8px 40px;
     display: inline-block;
+}
+
+.message .icon-form a {
+    text-decoration: none;
+    color: #444444;
+}
+
+.message .icon-form a:hover {
+    text-decoration: underline;
 }
 
 .icon-comment {
@@ -187,13 +196,17 @@ body {
     text-decoration: none;   
 }
 
-.message a.link-person {
+.message a.link-person { /* a[href^="http:"]  */
     text-decoration: none;
     background-color: #bfd7f5;
 }
 
 .message a.link-person:hover {
     text-decoration: underline;
+}
+
+#message-body .message-container:first-child {
+    padding-top: 16px;    
 }
 
 #message-body .message-container:nth-child(2n) .message {
@@ -208,6 +221,7 @@ body {
     background-color: #fdf6ed;
     border: 1px solid #eee0ce;
     padding: 24px;
+    border-radius: unset;
 }
 
 h1 {
@@ -282,6 +296,7 @@ p {
     border-top: 1px solid #f2f2f2;
     padding-top: 16px;
     padding-bottom: 16px;
+    border-radius: 0 0 4px 4px;
 }
 
 #user-input .image-cropper {
@@ -296,24 +311,29 @@ p {
         margin-top: 0;
         margin-bottom: 0;
     }    
+    
+    #container, #header, #user-input {
+        border-radius: 0;
+    }
 }
 
 /* Small screen: Mobile - 600px wide and less */
 @media only screen and (max-width: 600px) {
     #container {
         margin: 0;
+        
     }   
-    
-    .site-width {
-        width: 100%;
-    }
     
     #header {
         height: 72px;
         position: sticky;
         top: 0;
     }
-        
+    
+    .site-width {
+        width: 100%;
+    }
+      
     .mobile-view {
         display: block;
     }
@@ -323,7 +343,8 @@ p {
     }
 
     .gutter-lr {
-        padding: 0 8px;
+        padding-left: 8px;
+        padding-right: 8px;
     }
     
     .left-side {
@@ -341,6 +362,7 @@ p {
     #message-body .message-container:first-child {
         border-bottom: 1px solid #eee0ce;
         background-color: #fdf6ed;
+        margin-bottom: 16px;
     }
     
     #message-body .message-container:first-child .message {
