CSS edit for desktop Comment border-top

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,13 @@ body {
     padding-right: 16px;
 }
 
+#user-input.gutter-lr {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
 .left-side {
     position: absolute;
     top: 50%;
